# codeforces-solutions

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Contests/1006/: A.cpp
Contests/1007/: A. The Play Never Ends.cpp
Contests/1009/: A. Draw a Square.cpp
Contests/1013/: A.cpp
Contests/1016/: A.cpp  B.cpp  B.py  C.py
Contests/1039/: A.cpp
Misc/: lucky.cpp
Misc./: A. Line Breaks.cpp
Misc/: A. Coin Transformation.cpp  C. Anya and 1100.cpp  Preparing for the Olympiad.cpp
Practice/: A. Bear and Big Brother.cpp  A. Gregor and Cryptography.cpp  A. Ilya and Bank Account.cpp  A. LCM Problem.cpp  A. Lever.cpp  A. Long Comparison.cpp  A. Mike and palindrome.cpp  A. Sushi for Two.cpp  A. Treasure Hunt.cpp  A. Tricky Sum.cpp  A.Arpa’s hard exam and Mehrdad’s naive cheat.cpp  A.Bachgold_Problem.cpp  A.Cherry.cpp  A.Collatz_Conjecture.cpp  A.Dreamoon_and_Stairs.cpp  A.Everyone_Loves_to_Sleep.cpp  A.Football.cpp  A.George_and_Sleep.cpp  A.K-divisible_Sum.cpp  A.Keyboard.cpp  A.Maximum_GCD.cpp  A.Multiplication Table.cpp  A.New Year Candles.cpp  A.Olesya_and_Rodion.cpp  A.Power_Of_Two.cpp  A.The number of positions.cpp  A1.Encode and Decode (Easy Version).cpp  A2.Encode and Decode (Hard Version).cpp  B. Journey.cpp  B. Sum of Digits.cpp  B.Lecture.cpp  B.New_Year's_Number.cpp  B.Prime_checking.cpp  B.Radio_Station.cpp  C. Vasilije in Cacak.cpp  C.Replacement.cpp  C.Sum_of_Range.cpp  C._Clock_and_Strings.cpp  D. Almost All Divisors.cpp  D.Print Digits using Recursion.cpp  (+6 more)
Template/: CalculateMex.cpp  Divisors.cpp  SieveOfErathosthenes.cpp  template_file.cpp
(+80 files in other folders)
